# scriptr

./: .gitignore  CMakeLists.txt  compile_commands.json  imgui.ini  xmake.lua
save/: Project.json
source/: RichTextDocument.cpp  RichTextDocument.h  RichTextEditor.cpp  RichTextEditor.h  TextEditor.cpp  TextEditor.h  application.cpp  application.h  application.hpp  imnodes.h  imnodes_internal.h  main.cpp  node.hpp  project.h  project.hpp  script.h  unique_id.hpp
source/glad/include/glad/: gl.h  gles2.h
source/glad/src/: gl.c
source/imgui/: imconfig.h  imgui.h  imgui.ini  imgui_draw.cpp  imnodes.cpp
